--- a/html file/contact.html
+++ b/html file/contact.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="nav_list">
                     <ul>
-                        <li><a href="/html file/index.html" class="Contact">Home</a></li>
+                        <li><a href="/index.html" class="Contact">Home</a></li>
                         <li><a href="/contact.html" class="Contact">About</a></li>
                         <li><a href="/contact.html" class="Contact">Contact</a></li>
                     </ul>
