--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog App</title>
-    <link rel="stylesheet" href="/css files/style.css">
-    <link rel="stylesheet" href="/css files/blog.css">
-    <link rel="stylesheet" href="/css files/mobile.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="blog.css">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 
 <body>
@@ -19,15 +19,15 @@
                 </div>
                 <div class="nav_list">
                     <ul>
-                        <li><a href="/index.html" class="Contact">Home</a></li>
-                        <li><a href="/contact.html" class="Contact">About</a></li>
-                        <li><a href="/html file/contact.html" class="Contact">Contact</a></li>
+                        <li><a href="index.html" class="Contact">Home</a></li>
+                        <li><a href="contact.html" class="Contact">About</a></li>
+                        <li><a href="contact.html" class="Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
             <div class="right_nav">
                 <div class="nav_input">
-                    <form action="/html file/search.html" method="get">
+                    <form action="search.html" method="get">
                         <input type="text" placeholder="Artical Search" name="query">
                         <button id="btn">Search</button>
                     </form>
@@ -41,7 +41,7 @@
     <div class="myBlog">
 
         <div class="home_artical_img">
-            <img src="/images/img2.jpeg" alt="">
+            <img src="img2.jpeg" alt="">
         </div>
         <div class="home_artical_content">
             <h3 class="about_blog">Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet,
@@ -85,10 +85,10 @@
         <div class="home_articeles">
             <div class="home_articele">
                 <div class="home_artical_img">
-                    <img src="/images/img2.jpeg" alt="">
+                    <img src="img2.jpeg" alt="">
                 </div>
                 <div class="home_artical_content">
-                    <a href="/blogpost.html">
+                    <a href="blogpost.html">
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet.</h3>
                     </a>
                     <span>Auther Name: </span>
@@ -98,10 +98,10 @@
 
             <div class="home_articele">
                 <div class="home_artical_img">
-                    <img src="/images/img3.jpeg" alt="">
+                    <img src="img3.jpeg" alt="">
                 </div>
                 <div class="home_artical_content">
-                    <a href="/blogpost.html">
+                    <a href="blogpost.html">
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet.</h3>
                     </a> <span>Auther Name: </span>
                     <span>07th january 06 minutes read</span>
@@ -110,10 +110,10 @@
 
             <div class="home_articele">
                 <div class="home_artical_img">
-                    <img src="/images/img4.jpeg" alt="">
+                    <img src="img4.jpeg" alt="">
                 </div>
                 <div class="home_artical_content">
-                    <a href="/blogpost.html">
+                    <a href="blogpost.html">
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet.</h3>
                     </a>
                     <span>Auther Name: </span>
