--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="/css files/style.css">
-    <link rel="stylesheet" href="/css files/contact.css">
-    <link rel="stylesheet" href="/css files/mobile.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 
 <body>
@@ -19,15 +19,15 @@
                 </div>
                 <div class="nav_list">
                     <ul>
-                        <li><a href="/index.html" class="Contact">Home</a></li>
-                        <li><a href="/contact.html" class="Contact">About</a></li>
-                        <li><a href="/contact.html" class="Contact">Contact</a></li>
+                        <li><a href="index.html" class="Contact">Home</a></li>
+                        <li><a href="contact.html" class="Contact">About</a></li>
+                        <li><a href="contact.html" class="Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
             <div class="right_nav">
                 <div class="nav_input">
-                    <form action="/html file/search.html" method="get">
+                    <form action="search.html" method="get">
                     <input type="text" placeholder="Artical Search" name="query">
                     <button id="btn">Search</button>
                     </form>
