--- a/search.html
+++ b/search.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Articals</title>
-    <link rel="stylesheet" href="/css files/style.css">
-    <link rel="stylesheet" href="/css files/mobile.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 
 <body>
@@ -18,15 +18,15 @@
                 </div>
                 <div class="nav_list">
                     <ul>
-                        <li><a href="/index.html" class="Contact">Home</a></li>
-                        <li><a href="/contact.html" class="Contact">About</a></li>
-                        <li><a href="/html file/contact.html" class="Contact">Contact</a></li>
+                        <li><a href="index.html" class="Contact">Home</a></li>
+                        <li><a href="contact.html" class="Contact">About</a></li>
+                        <li><a href="contact.html" class="Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
             <div class="right_nav">
                 <div class="nav_input">
-                    <form action="/search.html" method="get">
+                    <form action="search.html" method="get">
                     <input type="text" placeholder="Artical Search" name="query">
                     <button id="btn">Search</button>
                     </form>
@@ -42,10 +42,10 @@
             <h2>Your Search Results</h2>
             <div class="home_articele">
                 <div class="home_artical_img">
-                    <img src="/images/img2.jpeg" alt="">
+                    <img src="img2.jpeg" alt="">
                 </div>
                 <div class="home_artical_content">
-                    <a href="/blogpost.html">
+                    <a href="blog.html">
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet.</h3>
                     </a>
                     <span>Auther Name: </span>
@@ -55,10 +55,10 @@
 
             <div class="home_articele">
                 <div class="home_artical_img">
-                    <img src="/images/img3.jpeg" alt="">
+                    <img src="img3.jpeg" alt="">
                 </div>
                 <div class="home_artical_content">
-                    <a href="/blogpost.html">
+                    <a href="blog.html">
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet.</h3>
                     </a> <span>Auther Name: </span>
                     <span>07th january 06 minutes read</span>
@@ -67,10 +67,10 @@
 
             <div class="home_articele">
                 <div class="home_artical_img">
-                    <img src="/images/img4.jpeg" alt="">
+                    <img src="img4.jpeg" alt="">
                 </div>
                 <div class="home_artical_content">
-                    <a href="/blogpost.html">
+                    <a href="blog.html">
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet.</h3>
                     </a>
                     <span>Auther Name: </span>
@@ -80,10 +80,10 @@
 
             <div class="home_articele">
                 <div class="home_artical_img">
-                    <img src="/images/img5.jpeg" alt="">
+                    <img src="img5.jpeg" alt="">
                 </div>
                 <div class="home_artical_content">
-                    <a href="/blogpost.html">
+                    <a href="blog.html">
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet.</h3>
                     </a>
                     <span>Auther Name: </span>
